--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.2.1
 dash==3.1.0
 dash-bootstrap-components==2.0.3
 dash-table==5.0.0
+dotenv==0.9.9
+et_xmlfile==2.0.0
 Flask==3.1.1
 Flask-Caching==2.3.1
 gunicorn==23.0.0
@@ -17,15 +19,20 @@ MarkupSafe==3.0.2
 narwhals==1.44.0
 nest-asyncio==1.6.0
 numpy==2.3.1
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.0
+pillow==12.0.0
 plotly==6.2.0
 pyodbc==5.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 redis==6.2.0
+reportlab==4.4.4
 requests==2.32.4
 retrying==1.4.0
+scipy==1.16.3
 setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.43
@@ -33,4 +40,5 @@ typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
+xlsxwriter==3.2.9
 zipp==3.23.0
