--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Caching==2.3.1
 gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.7.0
+inflection==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
